--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32-S3 UART]
+[env:esp32_S3_UART]
 platform = espressif32
 board = adafruit_feather_esp32s3_nopsram
 framework = arduino
@@ -19,7 +19,7 @@ lib_deps =
 	adafruit/Adafruit NeoPixel @ ^1.11.0
 	dlloydev/ESP32 ESP32S2 AnalogWrite@^4.3.4
 
-[env:esp32-S3 USB]
+[env:esp32_S3_USB]
 platform = espressif32
 board = adafruit_qtpy_esp32s3_nopsram
 framework = arduino
